--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "angular-shopping-cart-demo",
-  "version": "1.1.0",
-  "description": "Demo of an angular shopping cart",
+  "name": "angular2-thedoctoris-ts",
+  "version": "1.0.0",
+  "description": "angular2-thedoctoris-ts",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/drpicox/angular-shopping-cart-demo.git"
+    "url": "https://github.com/drpicox/angular2-thedoctoris-ts.git"
   },
   "author": "David Rodenas <david.rodenas@gmail.com>",
   "license": "ISC",
@@ -27,10 +27,10 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.3.1",
     "grunt-usemin": "^3.1.1",
-    "hintify": "^0.1.0",
     "jit-grunt": "^0.9.1",
     "stringify": "^3.1.0",
     "time-grunt": "^1.2.2",
+    "tsify": "^0.13.2",
     "uglifyify": "^3.0.1"
   },
   "dependencies": {
